# WattSeal

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yml
.github/workflows/: release.yml  rust.yml  rustfmt.yml
collector/: Cargo.toml  README.md  build.rs
collector/src/: api.rs  config.rs  lib.rs  main.rs
collector/src/core/: types.rs
collector/src/database/: mod.rs  tables.rs
collector/src/process/: groups.rs
collector/src/sensors/: disk.rs  gpu.rs  mod.rs  network.rs  process.rs  ram.rs
collector/src/sensors/cpu/: estimation.rs  linux_cpu.rs  mod.rs
collector/src/sensors/cpu/windows_cpu/: driver.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  logging.rs  singleton.rs  types.rs  utils.rs
common/src/database/: entries.rs  mod.rs  purge.rs
src/: main.rs
src/core/: types.rs
src/database/: mod.rs
src/sensors/: gpu.rs  mod.rs
src/sensors/cpu/: mod.rs
src/sensors/cpu/windows_cpu/: driver.rs  mod.rs
ui/: Cargo.toml  README.md
ui/src/: app.rs  icons.rs  lib.rs  main.rs  message.rs  themes.rs  translations.rs  types.rs
ui/src/components/: chart.rs  component_state.rs  footer.rs  hardware_card.rs  header.rs  helpers.rs  mod.rs  sensor_state.rs
ui/src/pages/: chart.rs  dashboard.rs  info.rs  mod.rs  optimization.rs  settings.rs
ui/src/styles/: button.rs  colors.rs  container.rs  mod.rs  picklist.rs  rule.rs  scrollable.rs  style_constants.rs  svg.rs  text.rs  text_input.rs  toggler.rs
