[package]
name = "power-monitor"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["collector", "ui", "common"]

[dependencies]
collector = { path = "collector" }
ui = { path = "ui" }
common = { path = "common" }
tray-icon = "0.21.2"
chrono = "0.4.43"
winit = "0.30.12"

[target.'cfg(windows)'.dependencies]
is-admin = "0.1.4"
runas = "1.2"