[package]
name = "WattSeal"
build = "build.rs"
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true
description.workspace = true

[workspace]
resolver = "3"
members = ["collector", "ui", "common"]

[workspace.package]
version = "0.4.0"
authors = ["Damien PHILIPPE <damien.philippe@edu.esiee.fr>", "Paul MALLARD <paul.mallard@edu.esiee.fr>"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://wattseal.com"
repository = "https://github.com/Daminoup88/WattSeal"
keywords = ["power", "energy", "monitoring", "carbon", "emissions", "sustainability"]
edition = "2024"
description = "WattSeal is a tool to monitor and analyze the power consumption of your computer, providing insights into energy usage and carbon emissions."

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
collector = { path = "collector" }
ui = { path = "ui" }
common = { path = "common" }
tray-icon = "0.21.2"
chrono = "0.4.43"
winit = "0.30.12"

[target.'cfg(windows)'.dependencies]
is-admin = "0.1.4"
runas = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"