[package]
name = "WattSeal"
build = "build.rs"
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true
description.workspace = true

[workspace]
resolver = "3"
members = ["collector", "ui", "common"]

[workspace.package]
version = "1.0.1"
authors = ["Damien PHILIPPE <damien.philippe@edu.esiee.fr>", "Paul MALLARD <paul.mallard@edu.esiee.fr>"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://wattseal.com"
repository = "https://github.com/Daminoup88/WattSeal"
keywords = ["power", "energy", "monitoring", "carbon", "emissions", "sustainability"]
edition = "2024"
description = "WattSeal is a tool to monitor and analyze the power consumption of your computer, providing insights into energy usage and carbon emissions."

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[dependencies]
collector = { path = "collector" }
ui = { path = "ui" }
common = { path = "common" }
tray-icon = { version = "0.21.2", default-features = false }
chrono = "0.4.44"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
winit = "0.30.13"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(windows)'.dependencies]
is-admin = "0.1.4"
runas = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"