[package]
name = "collector"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
win-kernel-driver = { git = "https://github.com/alex-dow/winRing0-rs" }
win_ring0 = { git = "https://github.com/alex-dow/winRing0-rs" }

[dependencies]
common = { path = "../common" }
adlx = "0.0.0-alpha.1"
display-info = "0.5.7"
is-admin = "0.1.4"
nvml-wrapper = "0.11.0"
sysinfo = "0.37.2"
windows = { version = "0.57", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation"
] }