[package]
name = "collector"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
win-kernel-driver = { git = "https://github.com/alex-dow/winRing0-rs" }
win_ring0 = { git = "https://github.com/alex-dow/winRing0-rs" }
adlx = "0.0.0-alpha.1"
is-admin = "0.1.4"
windows = { version = "0.57", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation"
] }

[target.'cfg(any(windows, target_os = "linux"))'.dependencies]
nvml-wrapper = "0.11.0"

[dependencies]
common = { path = "../common" }
chrono = "0.4.43"
display-info = "0.5.7"
sysinfo = "0.37.2"
battery = "0.7.8"
