[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
file_icon_provider = "1.0.0"

[target."cfg(windows)".dependencies]
pelite = "0.10.0"