[package]
name = "common"
version.workspace = true
edition = "2024"

[dependencies]
chrono = "0.4.44"
fs2 = "0.4"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
file_icon_provider = "1.0.0"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[target."cfg(windows)".dependencies]
pelite = "0.10.0"