[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
collector = { path = "../collector" }
sysinfo = "0.28"
clap = { version = "4.2", features = ["derive"] }
ctrlc = "3.2"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
image = "0.25"
tray-icon = "0.21.2"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
iced = { version = "0.13.1", features = ["smol"] }
plotters-iced = "0.11.0"
chrono = "0.4.42"
plotters = "0.3.7"
plotters-backend = "0.3.7"
rand = "0.9.2"