[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
collector = { path = "../collector" }
common = { path = "../common" }
sysinfo = "0.28"
ctrlc = "3.2"
image = "0.25"
tray-icon = "0.21.2"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
iced = { version = "0.13.1", features = ["smol"] }
plotters-iced = "0.11.0"
chrono = "0.4.42"
plotters = "0.3.7"
plotters-backend = "0.3.7"
rand = "0.9.2"