[package]
name = "ui"
version.workspace = true
edition = "2024"

[dependencies]
common = { path = "../common" }
open = "5"
iced = { version = "0.14.0", features = ["advanced", "tokio", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
plotters-iced2 = "0.14"
chrono = "0.4.44"
plotters = "0.3.7"
plotters-backend = "0.3.7"